kubernetes/apps/base/homepage/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`homepage.${cluster_domain}`)
      services:
        - kind: Service
          name: homepage
          port: http
