kubernetes/apps/base/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`homepage.theblacklodge.dev`)
      services:
        - kind: Service
          name: homepage
          port: http
